[package]
name = "latency-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = ">=0.33", features = ["bundled", "static-link"] }

tracing = "0.1"
tracing-subscriber = "0.3"


[dependencies.tracing-tracy]
version = "0.8"